change project name

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "icjia-summit",
+    "name": "icjia-proc-justice",
     "version": "1.0.0",
     "description": "A Vue.js project",
     "author": "JinFong <Jin.Fong@illinois.gov>",
